// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1bc84hq-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: scroll;
}

.cache-exvtnx-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-92hyda-Bullet-animationFlash {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1p5biq8-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1bc84hq-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
      >
        <li
          class="cache-exvtnx-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-92hyda-Bullet-animationFlash enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-yil21r-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1p5biq8-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1bc84hq-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: scroll;
}

.cache-exvtnx-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4f0599;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-92hyda-Bullet-animationFlash {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1p5biq8-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1bc84hq-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
      >
        <li
          class="cache-exvtnx-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-92hyda-Bullet-animationFlash enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-yil21r-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1p5biq8-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data and content 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1rvbv3u-StyledContent {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size: 25px;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="cache-1rvbv3u-StyledContent e17m7c930"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1bc84hq-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: scroll;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-e5jh6x-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-3.560568890002063e-14,93L-2.8484551120016506e-14,74.4A74.4,74.4,0,1,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M-3.560568890002063e-14,93A93,93,0,1,1,6.551677018400607e-14,-93L5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-2.8484551120016506e-14,74.4Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1bc84hq-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-e5jh6x-Bullet enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1bc84hq-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: scroll;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
            <pattern
              height="5"
              id="lines.bg.#F4306C"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="#F4306C"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="url(#lines.bg.#F4306C)"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1bc84hq-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-discount"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-discount"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-discount"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-16mg1da-EmptyLegend {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 20px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="#f6f6f8"
                opacity="1"
                stroke="rgb(172, 172, 174)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="cache-16mg1da-EmptyLegend e17m7c931"
    >
      <p
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1bc84hq-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: scroll;
}

.cache-1klfns5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #4a4f62;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-e5jh6x-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #4F1A81;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-1j2xuq2-Line {
  border-bottom: 1px solid #e6e9f0;
  position: relative;
  width: 100%;
}

.cache-1dejm4g-ProgressiveLine {
  border-bottom: 1px solid #4f0599;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-15v4bha-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F4306C;
}

.cache-bosrvg-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #F79E43;
}

.cache-1b806re-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #8B3DD3;
}

.cache-178z5zh-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #EC5775;
}

.cache-lo6qcr-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #43C1A3;
}

.cache-1n24sj5-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #76DFDE;
}

.cache-trj95b-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #C2E457;
}

.cache-18avcmg-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #45d69e;
}

.cache-16i93g6-Bullet {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #ff8c69;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,0,1,54.664028463200005,-75.23858047687011L43.73122277056,-60.1908643814961A74.4,74.4,0,0,0,4.555686092828154e-15,-74.4Z"
                fill="#4F1A81"
                opacity="1"
                stroke="rgb(55, 18, 90)"
                stroke-width="0"
              />
              <path
                d="M54.664028463200005,-75.23858047687011A93,93,0,0,1,88.44825601544927,-28.73858047687011L70.75860481235942,-22.99086438149609A74.4,74.4,0,0,0,43.73122277056,-60.1908643814961Z"
                fill="#F4306C"
                opacity="1"
                stroke="rgb(171, 34, 76)"
                stroke-width="0"
              />
              <path
                d="M88.44825601544927,-28.73858047687011A93,93,0,0,1,88.44825601544927,28.73858047687011L70.75860481235942,22.99086438149609A74.4,74.4,0,0,0,70.75860481235942,-22.99086438149609Z"
                fill="#F79E43"
                opacity="1"
                stroke="rgb(173, 111, 47)"
                stroke-width="0"
              />
              <path
                d="M88.44825601544927,28.73858047687011A93,93,0,0,1,54.664028463200005,75.23858047687011L43.73122277056,60.1908643814961A74.4,74.4,0,0,0,70.75860481235942,22.99086438149609Z"
                fill="#8B3DD3"
                opacity="1"
                stroke="rgb(97, 43, 148)"
                stroke-width="0"
              />
              <path
                d="M54.664028463200005,75.23858047687011A93,93,0,0,1,5.694607616035192e-15,93L4.555686092828154e-15,74.4A74.4,74.4,0,0,0,43.73122277056,60.1908643814961Z"
                fill="#EC5775"
                opacity="1"
                stroke="rgb(165, 61, 82)"
                stroke-width="0"
              />
              <path
                d="M5.694607616035192e-15,93A93,93,0,0,1,-54.66402846319999,75.23858047687011L-43.731222770559995,60.1908643814961A74.4,74.4,0,0,0,4.555686092828154e-15,74.4Z"
                fill="#43C1A3"
                opacity="1"
                stroke="rgb(47, 135, 114)"
                stroke-width="0"
              />
              <path
                d="M-54.66402846319999,75.23858047687011A93,93,0,0,1,-88.44825601544927,28.73858047687012L-70.75860481235942,22.990864381496095A74.4,74.4,0,0,0,-43.731222770559995,60.1908643814961Z"
                fill="#76DFDE"
                opacity="1"
                stroke="rgb(83, 156, 155)"
                stroke-width="0"
              />
              <path
                d="M-88.44825601544927,28.73858047687012A93,93,0,0,1,-88.44825601544929,-28.738580476870098L-70.75860481235944,-22.99086438149608A74.4,74.4,0,0,0,-70.75860481235942,22.990864381496095Z"
                fill="#C2E457"
                opacity="1"
                stroke="rgb(136, 160, 61)"
                stroke-width="0"
              />
              <path
                d="M-88.44825601544929,-28.738580476870098A93,93,0,0,1,-54.66402846320001,-75.2385804768701L-43.73122277056002,-60.190864381496084A74.4,74.4,0,0,0,-70.75860481235944,-22.99086438149608Z"
                fill="#45d69e"
                opacity="1"
                stroke="rgb(48, 150, 111)"
                stroke-width="0"
              />
              <path
                d="M-54.66402846320001,-75.2385804768701A93,93,0,0,1,-1.7083822848105575e-14,-93L-1.3667058278484462e-14,-74.4A74.4,74.4,0,0,0,-43.73122277056002,-60.190864381496084Z"
                fill="#ff8c69"
                opacity="1"
                stroke="rgb(179, 98, 74)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1bc84hq-List enw618e8"
    >
      <div
        aria-describedby="chart-legend-compute"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-e5jh6x-Bullet enw618e6"
            color="#4F1A81"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Compute
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-gpu"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-15v4bha-Bullet enw618e6"
            color="#F4306C"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              GPU Instances
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-functions"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-functions"
          />
          <div
            class="cache-bosrvg-Bullet enw618e6"
            color="#F79E43"
            id="chart-legend-functions"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Serverless Functions
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-containers"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-containers"
          />
          <div
            class="cache-1b806re-Bullet enw618e6"
            color="#8B3DD3"
            id="chart-legend-containers"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Serverless Containers
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-s3"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-s3"
          />
          <div
            class="cache-178z5zh-Bullet enw618e6"
            color="#EC5775"
            id="chart-legend-s3"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Object Storage
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-dns"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-dns"
          />
          <div
            class="cache-lo6qcr-Bullet enw618e6"
            color="#43C1A3"
            id="chart-legend-dns"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Domain zones
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-appleSilicon"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-appleSilicon"
          />
          <div
            class="cache-1n24sj5-Bullet enw618e6"
            color="#76DFDE"
            id="chart-legend-appleSilicon"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Apple Silicon
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-baremetal"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-baremetal"
          />
          <div
            class="cache-trj95b-Bullet enw618e6"
            color="#C2E457"
            id="chart-legend-baremetal"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Baremetal
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-database"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-database"
          />
          <div
            class="cache-18avcmg-Bullet enw618e6"
            color="#45d69e"
            id="chart-legend-database"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Database
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-describedby="chart-legend-lb"
      >
        <li
          class="cache-1klfns5-ListItem enw618e7"
        >
          <div
            class="cache-1swvs82-ToggleBox enw618e2"
            data-testid="chart-legend-lb"
          />
          <div
            class="cache-16i93g6-Bullet enw618e6"
            color="#ff8c69"
            id="chart-legend-lb"
          />
          <div
            class="cache-s9pm9i-Label enw618e5"
          >
            <span
              class="cache-1o1agb-Text enw618e3"
            >
              Load Balancer
            </span>
            <span
              class="cache-1j2xuq2-Line enw618e1"
            >
              <span
                class="cache-1dejm4g-ProgressiveLine enw618e0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value enw618e4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with no props 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container e17m7c932"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#151a2d"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M5.241341614720486e-14,-74.4A74.4,74.4,0,1,0,-5.241341614720486e-14,74.4A74.4,74.4,0,1,0,5.241341614720486e-14,-74.4Z"
                fill="#f6f6f8"
                opacity="1"
                stroke="rgb(172, 172, 174)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
